--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@
 #landing{
     padding: 2rem;
 }
+.row{
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
 a{
     color: black;
 }
@@ -17,6 +22,7 @@ a{
     justify-content: space-between;
     align-items: center;
     padding: 0 16px;
+
  }
  .logo__img{
     width: 80px;
@@ -42,34 +48,133 @@ li{
     align-items: center;
 }
 
+.btn{
+
+}
+
 /* HEADER */
 
 header{
     display: flex;
-    padding: 48px;
+    /* padding: 48px; */
+    justify-content: center;
+    align-items: center;
+}
+.row__2{
+    display: flex;
+    padding: 7% 1%; 
+}
+.left{
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+   
+}
+.right{
+    width: 60%;
 }
 
-.header__format{
-    width: 41.6667%;
-    max-width: none;
-    text-align: left;
+.img__2{
+    max-width: 100%;
+    height: auto;
 }
-
 h2{
     font-size: 45px;
 
 }
 
-.figure__1{
-    min-width: 0px;
-    width: 100%;
-    max-width: 32rem;
-}
-.img_1{
-    height: auto;
-}
+
 .purple{
     --tw-text-opacity: 1;
     color:rgba(100,21,255,var(--tw-text-opacity)) ;
-    word-wrap: normal;
+}
+p{
+    padding: 24px 0;
+}
+
+.input__1{
+    display: flex;
+    transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform;
+    padding-left: 2rem;
+    /* padding-top: 1rem; */
+    /* padding-bottom: 1rem; */
+    border-radius: 9999px;
+    border-width: 2px;
+    width: 100%;
+    font-weight: 500;
+    transition-duration: 300ms;
+    position: relative;
+    max-width: 28rem;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+h3{
+    padding: 24px 0;    
+    font-weight: 700;
+    
+}
+.cust{
+    --tw-text-opacity: 1;
+    color: rgba(160,174,192,var(--tw-text-opacity));
+}
+.img__1{
+    width: 100%;
+}
+
+button{
+  
+}
+
+
+/* FEATURES */
+
+.container{
+    padding: 80px 0;
+}
+.spacing{
+    margin-top: 2.5rem;
+    width: 100%;
+}
+.secure{
+    display: flex;
+    flex-wrap: wrap;
+}
+.service{
+    display: flex;
+    width: calc(100%/3);
+}
+.text__container{
+    display: flex;
+    flex-direction: column;
+}
+
+.feature__descprition{
+    text-align: center;
+}
+.text__feature{
+    width: 100%;
+    text-align: center;
+}
+.image__container{
+    border-width: 1px;
+    text-align: center;
+    border-radius: 9999px;
+    padding: 1.25rem;
+    flex-shrink: 0;
+}
+.title__container{
+    margin-top: 1rem;
+    letter-spacing: 0.025em;
+    font-weight: 700;
+    font-size: 1.5rem;
+    line-height: 1;
+}
+.service__para{
+    font-weight: 500;
+    --tw-text-opacity: 1;
+    color: rgba(124,139,161,var(--tw-text-opacity));
+    line-height: 2;
 }
