--- a/style.css
+++ b/style.css
@@ -192,6 +192,7 @@ button{
     width: 50%;
     display: flex;
     flex-direction: column;
+    padding: 0, ;
  }
  .design__image{
     width: 50%;
@@ -200,3 +201,11 @@ button{
     max-width: 100%;
     height: auto;
  }
+.design__and__development{
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+}
+.h3__title{
+   padding: auto;
+}
