--- a/style.css
+++ b/style.css
@@ -384,7 +384,7 @@ PRICING
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    border-radius: 9999px
+    border-radius: 8px;
     box-shadow: 0 1px 3px 0 rgba(0,0,0,0.1), 0 1px 2px 0 rgba(0,0,0,0.06);
     position: relative;
 }
